--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           everyday tasks, or both. You can build your own own PC or just buy a prebuild one. You can buy a
           prebuilt PC from IBUYPOWER or any of the other prebuilt PC sources. If you want to play thousands
           or millions of games and can play the price a PC is for you. But if you want to play games
-          for a cheaper price then a console is for you. 
-
+          for a cheaper price then a console is for you.</p>
+       <h1>Is PC Gaming for you?</h1>
          </p> <a href="http://www.ibuypower.com/">IBUYPOWER</a>
           <img src="http://cdn2.pcadvisor.co.uk/cmsdata/reviews/3605095/ViBox_Wildfire_gaming_PC.jpg"width="250" height="200"
 
