--- a/index.html
+++ b/index.html
@@ -2,23 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">  
   </head>
   <body>
-<h1 style="color : Red">PC Gaming:The Good, the Bad</h1>
-    <h4><p>PC gaming has its ups and downs. The PC is a leading
-       gaming machine right now because there are vast choices of games that you can choose from.
-        There are many places where you can get PC games. Like Steam and g2a. There are many
-        types of PC games,from MMOs to first person shooter games. If you pay the right price you
-        can get a great gaming machine that can play every title and get high frame rates.</p>
-        <p>When you are picking out your PC you should decide if you want it for gaming, for just web browsing and
-          everyday tasks, or both. You can build your own own PC or just buy a prebuild one. You can buy a
-          prebuilt PC from IBUYPOWER or any of the other prebuilt PC sources. If you want to play thousands
-          or millions of games and can play the price a PC is for you. But if you want to play games
-          for a cheaper price then a console is for you.</p>
-       <h1>Is PC Gaming for you?</h1>
-         </p> <a href="http://www.ibuypower.com/">IBUYPOWER</a>
-          <img src="http://cdn2.pcadvisor.co.uk/cmsdata/reviews/3605095/ViBox_Wildfire_gaming_PC.jpg"width="250" height="200"
+    <h1>Gaming Is in the 21 century</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="pc.html">PC Gaming</a>
+      <a href="ps4.html">Ps4 Gaming</a>
+    </nav>
 
   </body>
 </html>
