--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Gaming Is in the 21 century</h1>
@@ -11,6 +11,9 @@
       <a href="pc.html">PC Gaming</a>
       <a href="ps4.html">Ps4 Gaming</a>
     </nav>
-
+<p>The PC is a good gaming machine but they can be expensive. If you want a
+  console the Ps4 or Xbox is a good choice. And there are many other
+  consoles that you can choose from. Alson you play games on your phone
+  
   </body>
 </html>
