project almost done.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     </nav>
 <p>The PC is a good gaming machine but they can be expensive. If you want a
   console the Ps4 or Xbox is a good choice. And there are many other
-  consoles that you can choose from. Alson you play games on your phone
-  
+  consoles that you can choose from. Also you play games on your phone. Gaming is everywhere.</p>
+  <p>To play games you don't need the best computer but if you want to play the best games on ultra settings and have a good frame
+    rate then you need to spend a good amount of money. Just don't play for to long. And then
+    go outside and hang out with your friends. And don't be that kid
+    that rages when he loses in a game and screams into his mic. Just
+    play your games for fun.</p>
+
+
   </body>
 </html>
