--- a/ps4.html
+++ b/ps4.html
@@ -10,7 +10,7 @@
       The Playstion 4 or Xbox one might be for you then. The Ps4 costs about 300-400
       dollars and so does the Xbox one. On consles you can play a lot of games
       at 60 frames per second and a resolution of 1080p. The new Xbox One S and Playstation
-      pro can play at a resolution of 4k I think.</p>
+      pro can play at a resolution of 4k I think.Also the ps4 only has 500GB.You can use that pretty fast.</p>
       <p>Consoles do come with limitations like you have to pay
         for an online subscription. For a month you have to play 10 dollars, for
         three months you have to pay 25 dollars and for a year you have to pay
