--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     go outside and hang out with your friends. And don't be that kid
     that rages when he loses in a game and screams into his mic. Just
     play your games for fun.</p>
+    <h1>Is Gaming For You??</h1>
 
 
   </body>
