--- a/pc.html
+++ b/pc.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<h1 style="color : Red">PC Gaming:The Good, the Bad</h1>
-    <h4><p>PC gaming has its ups and downs. The PC is a leading
+<h1>PC Gaming:The Good, the Bad</h1>
+    <p>PC gaming has its ups and downs. The PC is a leading
        gaming machine right now because there are vast choices of games that you can choose from.
-        There are many places where you can get PC games. Like Steam and g2a. There are many
+        There are many places where you can get PC games. Like Steam and other websites. There are many
         types of PC games,from MMOs to first person shooter games. If you pay the right price you
         can get a great gaming machine that can play every title and get high frame rates.</p>
         <p>When you are picking out your PC you should decide if you want it for gaming, for just web browsing and
@@ -17,7 +17,7 @@
           or millions of games and can play the price a PC is for you. But if you want to play games
           for a cheaper price then a console is for you.</p>
        <h1>Is PC Gaming for you?</h1>
-         </p> <a href="http://www.ibuypower.com/">IBUYPOWER</a>
+       <a href="http://www.ibuypower.com/">IBUYPOWER</a>
           <img src="http://cdn2.pcadvisor.co.uk/cmsdata/reviews/3605095/ViBox_Wildfire_gaming_PC.jpg"width="250" height="200"
 
   </body>
