--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="pc.html">PC Gaming</a>
-      <a href="ps4.html">Ps4 Gaming</a>
+      <a href="console.html">Console Gaming</a>
     </nav>
 <p>The PC is a good gaming machine but they can be expensive. If you want a
   console the Ps4 or Xbox is a good choice. And there are many other
