--- a/console.html
+++ b/console.html
@@ -8,8 +8,8 @@
     <h1>Console Gaming</h1>
     <p>Do you want something less expensive that can play a lot of games?
       The Playstion 4 or Xbox one might be for you then. The Ps4 costs about 300-400
-      dollars and so does the Xbox one. On consles you can play a lot of games
-      at 60 frames per second and a resolution of 1080p. The new Xbox One S and Playstation
+      dollars and so does the Xbox one.For ps4 you can play a lot of games
+      at 60 frames per second and a resolution of 1080p. Also Xbox can play at a resolution of 900p and 60fps. The new Xbox One S and Playstation
       pro can play at a resolution of 4k I think.Also the ps4 only has 500GB on its base model.You can use that pretty fast.</p>
 <h1>Limitations for Consoles</h1>
       <p>Consoles do come with limitations like you have to pay
